--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,10 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 et-xmlfile==1.1.0
-Flask==2.0.2
+
 idna==3.3
 itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
-numpy==1.21.3
+
 openai==0.11.0
 openpyxl==3.0.9
 pandas==1.3.4
@@ -23,3 +21,23 @@ toml==0.10.2
 tqdm==4.62.3
 urllib3==1.26.7
 Werkzeug==2.0.2
+attrs==20.3.0
+
+coverage==5.3.1
+flake8==3.8.4
+Flask==1.1.2
+Frozen-Flask==0.15
+iniconfig==1.1.1
+
+MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==20.8
+pluggy==0.13.1
+py==1.10.0
+
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.2.1
+pytest-cov==2.10.1
+toml==0.10.2
+
