--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,39 @@
 autopep8==1.6.0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+distlib==0.3.4
 et-xmlfile==1.1.0
-Flask==2.0.2
+filelock==3.7.0
+Flask==2.1.2
+Flask-FlatPages==0.8.1
+Frozen-Flask==0.18
 idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.2
-MarkupSafe==2.0.1
+itsdangerous==2.1.2
+jamstack==1.0.0
+Jinja2==3.1.2
+livereload==2.6.3
+Markdown==3.3.7
+MarkupSafe==2.1.1
 numpy==1.21.3
 openai==0.11.0
 openpyxl==3.0.9
 pandas==1.3.4
 pandas-stubs==1.2.0.35
+pipenv==2022.5.2
+platformdirs==2.5.2
 pycodestyle==2.8.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
-requests==2.26.0
+PyYAML==6.0
+requests==2.27.1
 six==1.16.0
 toml==0.10.2
+tornado==6.1
 tqdm==4.62.3
-urllib3==1.26.7
-Werkzeug==2.0.2
+urllib3==1.26.9
+virtualenv==20.14.1
+virtualenv-clone==0.5.7
+Werkzeug==2.1.2
