--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,31 @@
-venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-*.pyc
-__pycache__/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.envcopy
+# testing
+/coverage
+.venv
+# next.js
+/.next/
+/out/
+main.css
+# production
+/build
+static/*
+# misc
+.DS_Store
 
-instance/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-.pytest_cache/
-.coverage
-htmlcov/
-
-dist/
-build/
-*.egg-info/
-
-.DS_STORE
-runtime.txt
+# env files
 .env
-frontend/
-.venv/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
